--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,4 +1,3 @@
-<header id="header" class="header dark-background d-flex flex-column">
 
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
@@ -17,11 +16,11 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+        <li><a href="index.html"><i class="bi bi-house navicon"></i>Home</a></li>
+        <li><a href="index.html"><i class="bi bi-person navicon"></i> About</a></li>
+        <li><a href="index.html"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
+        <li><a href="index.html"><i class="bi bi-images navicon"></i> Portfolio</a></li>
+        <li><a href="index.html"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
 
@@ -38,21 +37,17 @@
         </span>
       </a>
 
-      <a href="WeatherPred.html" class="news-item d-block mb-2">
+      <a href="detail4.html" class="news-item d-block mb-2">
         <small class="text-white-50 d-block">Jan 2026</small>
         <span class="text-white small">
-          LAUNCHING PROJECT ! MAchine Learning Weather Prediction
+          New Ongoing Project! Hearts of Iron 4 Mod
         </span>
       </a>
 
       <a href="detail3.html" class="news-item d-block">
         <small class="text-white-50 d-block">Jan 2026</small>
         <span class="text-white small">
-          New Feature For Portfolio "News"
+          Fix some issues with navbar
         </span>
       </a>
     </div>
-
-    <!-- END NEWS -->
-
-  </header>
