--- a/partials/navbari.html
+++ b/partials/navbari.html
@@ -28,10 +28,10 @@
         <i class="bi bi-megaphone me-1"></i> News
       </h6>
 
-      <a href="detail.html" class="news-item d-block mb-2">
+      <a href="detail4.html" class="news-item d-block mb-2">
         <small class="text-white-50 d-block">Jan 2026</small>
         <span class="text-white small">
-          New Changelog 0.6.0 for Ongoing Project Bookstore
+          New Changelog 0.9.0 for Ongoing Project Modding Hearts of Iron IV
         </span>
       </a>
 
