--- a/partials/navbari.html
+++ b/partials/navbari.html
@@ -35,10 +35,10 @@
         </span>
       </a>
 
-      <a href="WeatherPred.html" class="news-item d-block mb-2">
+      <a href="detail.html" class="news-item d-block mb-2">
         <small class="text-white-50 d-block">Jan 2026</small>
         <span class="text-white small">
-          LAUNCHING PROJECT ! MAchine Learning Weather Prediction 
+          New Changelog 0.6.5 for Ongoing Project Online Book Marketplace
         </span>
       </a>
 
