--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -35,10 +35,10 @@
         </span>
       </a>
 
-      <a href="detail4.html" class="news-item d-block mb-2">
+      <a href="detail.html" class="news-item d-block mb-2">
         <small class="text-white-50 d-block">Jan 2026</small>
         <span class="text-white small">
-          New Ongoing Project! Hearts of Iron 4 Mod
+          New Changelog 0.6.5 for Ongoing Project Online Book Marketplace
         </span>
       </a>
 
